fixed padding on mobile view on 'hero'

--- a/css/styles.css
+++ b/css/styles.css
@@ -125,6 +125,10 @@ img {
     display: none;
   }
 
+  .hero {
+    padding: 100px 20px;
+  }
+
   h1 {
     line-height: 1.2em;
   }
